--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.4.17",
+    "qrcode": "^1.4.4",
     "redis": "^3.0.2",
     "sequelize": "^6.3.5",
     "uuid": "^8.3.2"
